--- a/raytrace.cabal
+++ b/raytrace.cabal
@@ -19,4 +19,5 @@ executable raytrace
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                       , vector
                        , JuicyPixels >= 3.2 && < 4
