--- a/raytrace.cabal
+++ b/raytrace.cabal
@@ -16,7 +16,7 @@ extra-source-files:  README.md
 executable raytrace
   hs-source-dirs:      src
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
+  ghc-options:         -threaded -rtsopts -O2 -with-rtsopts=-N
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                        , vector
